# rv6502emu

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json
src/: bus.rs  cpu.rs  debug.rs  debugger.rs  debugger_test.rs  gui.rs  lib.rs  memory.rs  utils.rs
src/cpu/: addressing_modes.rs  cpu_error.rs  debugger.rs  opcodes.rs
src/cpu/debugger/: asm_disasm.rs  breakpoints.rs  dbg_api.rs
src/debugger/: asm_disasm.rs  breakpoints.rs
src/memory/: mem_error.rs  memory_error.rs
tests/: test.rs
