[package]
name = "rv6502emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"
env_logger = "0.9.0"
gtk = "0.14.0"
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
