[package]
name = "rv6502emu"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "debugger_test"
path = "src/debugger_test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1.4.3"
env_logger = "0.9.0"
function_name = "0.2.0"
hexplay = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
